0.33 2019-01-08
    - Added debug flags (margaretha)
    
0.32 2018-12-13
    - [bugfix] Support verbatim string queries (#57; diewald).

0.31 2018-10-31
    - [bugfix] Security upgrade of Jackson for CVE-2017-17485 and
      CVE-2018-7489 (diewald)
    - [bugfix] OpenJDK8u181-workaround (see Debian Bug report #911925)
      (diewald)

0.30 2018-10-09
    - Introduced docGroupRef and added VC reference in collection query
      (margaretha)
    - Fixed checking error in QuerySerializer (margaretha)

0.29 2018-07-23
    - Added check for errors on QuerySerializer object (diewald)
    - Support verbatim string values in Poliqarp
    (fixes #42; diewald)
    - Fix support for verbatim string values in collection queries
    (diewald)
    - Added hint to update the library (diewald)

0.28 2018-01-10
    - Added some enums for koral:operation (margaretha)
    - Fixed node serialization of Annis QL containing lemma (margaretha)
    - Added serialization for Annis keyword "lemma" (margaretha)
    - Removed version from FCSQL processor (margaretha)
    - Fixed Annis regex bug regarding slash after foundry (margaretha)
    - Fixed use of regular expressions in corpus queries
      (margaretha, diewald)
    - Fixed treatment of 'AND' and 'and' in vc serialization (diewald)
    
0.27 2017-09-12
    - Changed Cosmas2 wildcards serialization as regex (margaretha)  
    - Fixed OP IN with classRefCheck.INCLUDES (margaretha)
    - Implemented OP PV with exclusion (margaretha)
    
0.26 2017-06-29
    - Updated collection query grammar (margaretha)
    - Updated maven dependency phase (margaretha)
    - Fixed handling of non-necessary brackets in tokens (diewald)
    - Improved error handling (margaretha)
    - Added wrap to koral:span serialization (margaretha)

0.25 2017-05-10
    - Altered dominance and relation serialization (margaretha)
     
0.24 2017-05-03
    - Fixed serialization of regexes for VCs (diewald)    